--- a/index.html
+++ b/index.html
@@ -34,24 +34,48 @@
                             <option value="Aline">Aline Arbeiten</option>
                             <option value="Zusammen">Zusammen Arbeiten</option>
                             <option value="Gruppe">Gruppen Arbeiten</option>
-                            <option value="">Aline Arbeiten</option>
-                            <option value="Aline">Aline Arbeiten</option>
+                            <option value="Bibliothek">Bibliothek</option>
+                            <option value="Hause">Hause</option>
                         </select>
                     </div>
                     <div class="formdiv">
-                        <label for="">Would you recommend Clarusway to a friend?</label><br><br>
+                        <label for="">Would you recommend Clarusway to a friend?</label><br>
                         <input type="radio" name="Deine Wahl Freund zu sein" id="radio" value="Naturlich, ja">
                         
-                        <label for="radio">Definitely, Yes</label><br>
-                        <input type="radio" name="Deine Wahl Freund zu sein" id="radio" value="Naturlich, ja">
-                        <label for="radio">Yes</label>
+                        <label class="Yeme" for="radio">Definitely, Yes</label><br>
+                        <input type="radio" name="Deine Wahl Freund zu sein" id="radio1" value="Ja">
+                        <label for="radio1">Yes</label>
                         <br>
-                        <input type="radio" name="Deine Wahl Freund zu sein" id="radio" value="Naturlich, ja">
-                        <label for="radio">Definitely, Yes</label>
+                        <input type="radio" name="Deine Wahl Freund zu sein" id="radio2" value="Nein">
+                        <label for="radio2">Nein</label>
                         <br>
-                        <input type="radio" name="Deine Wahl Freund zu sein" id="radio" value="Naturlich, ja">
-                        <label for="radio">Definitely, Yes</label>
+                        <input type="radio" name="Deine Wahl Freund zu sein" id="radio3" value="Auf keinen Fall">
+                        <label for="radio3">Auf keinen Fall</label>
                         
+                    </div>
+                    <div class="formdiv">
+                        <label for="feature">What is your favourite feature of Clarusway?</label><br>
+                        <select name="Deine Favourite Feature" id="feature">
+                            <option value="Html">Html</option>
+                            <option value="Css">Css</option>
+                            <option value="Java">Java</option>
+                            <option value="React">React</option>
+                        </select>
+                    </div>
+                    <div class="formdiv">
+                        <label for="">What would you like to see improved?</label><br>
+                        <input type="checkbox" name="Improved" id="check1" value="Front-end Projects">
+                        <label for="check1">Front-end Projects</label><br>
+                        <input type="checkbox" name="Improved" id="check2" value="Back-end Projects">
+                        <label for="check2">Back-end Projects</label><br>
+                        <input type="checkbox" name="Improved" id="check3" value="Data Science">
+                        <label for="check3">Data Science</label><br>
+                        <input type="checkbox" value="Additional Courses" name="Improved" id="check4">
+                        <label for="check4">Additional Courses</label>
+                    </div>
+                    <div class="formdiv">
+                        <label for="yorum">Any Comments or Suggestions?</label><br>
+                        <textarea name="Dein Commentar" id="yorum" cols="20" rows="5" placeholder="Enter your Comment here... Thanks for  your Comment"></textarea>
                     </div>
 
                     <br>
