--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
                     </div>
                     <div class="formdiv">
                         <label for="">Would you recommend Clarusway to a friend?</label><br>
-                        <input type="radio" name="Deine Wahl Freund zu sein" id="radio" value="Naturlich, ja">
+                        <input class="kay" type="radio" name="Deine Wahl Freund zu sein" id="radio4" value="Naturlich, ja">
                         
                         <label class="Yeme" for="radio">Definitely, Yes</label><br>
-                        <input type="radio" name="Deine Wahl Freund zu sein" id="radio1" value="Ja">
+                        <input class="kay" type="radio" name="Deine Wahl Freund zu sein" id="radio1" value="Ja">
                         <label for="radio1">Yes</label>
                         <br>
-                        <input type="radio" name="Deine Wahl Freund zu sein" id="radio2" value="Nein">
+                        <input class="kay" type="radio" name="Deine Wahl Freund zu sein" id="radio2" value="Nein">
                         <label for="radio2">Nein</label>
                         <br>
-                        <input type="radio" name="Deine Wahl Freund zu sein" id="radio3" value="Auf keinen Fall">
+                        <input class="kay" type="radio" name="Deine Wahl Freund zu sein" id="radio3" value="Auf keinen Fall">
                         <label for="radio3">Auf keinen Fall</label>
                         
                     </div>
@@ -75,12 +75,12 @@
                     </div>
                     <div class="formdiv">
                         <label for="yorum">Any Comments or Suggestions?</label><br>
-                        <textarea name="Dein Commentar" id="yorum" cols="20" rows="5" placeholder="Enter your Comment here... Thanks for  your Comment"></textarea>
+                        <textarea name="Dein Commentar" id="yorum" cols="40" rows="5" placeholder="Enter your Comment here... Thanks for  your Comment"></textarea>
                     </div>
 
                     <br>
                     <div class="buttonun">
-                    <input type="submit" value="Submit">
+                    <input class="btn1" type="submit" value="Submit">
                     </div>
 
                 </form>
