--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
                     </div>
                     <div class="formdiv">
                         <label for="yorum">Any Comments or Suggestions?</label><br>
-                        <textarea name="Dein Commentar" id="yorum" cols="40" rows="5" placeholder="Enter your Comment here... Thanks for  your Comment"></textarea>
+                        <textarea name="Dein Commentar" id="yorum" cols="40" rows="5" placeholder="Enter your Comment here... Thanks for  your Comment" ></textarea>
+                        <!-- style="resize: none;" -->
                     </div>
 
                     <br>
