formda yan yana eklendi

--- a/EskiHali/index.html
+++ b/EskiHali/index.html
@@ -35,8 +35,8 @@
         <form action="result.html" method="GET" target="_blank">
           <table style="width: 100%">
             <tr >
-              <td class="table-box" >
-                <label for="name">Name </label>
+              <td class="table-box" ></td>
+              <td>  <label for="name">Name </label>
               </td>
               <td>
                 <input
