yeni siteye basladim

--- a/Event/index.html
+++ b/Event/index.html
@@ -22,8 +22,8 @@
                         <td class="in1"><input type="date" name="Dateniz" id="date"></td>
                     </tr>
                     <tr>
-                        <td class="ev1"><label for="evname">Event Name</label></td>
-                        <td class="in1"><input type="text" name="Nameniz" id="evname"></td>
+                        <td class="ev1"><label for="evname">Time</label></td>
+                        <td class="in1"><input type="time" name="Nameniz" id="evname"></td>
                     </tr>
                     <tr>
                         <td class="ev1"><label for="evname">Event Name</label></td>
