--- a/GoogleSon/index.html
+++ b/GoogleSon/index.html
@@ -59,7 +59,7 @@
       </div>
 
       <footer>
-        <div class="country">Turkey</div>
+        <div class="country">Germany</div>
         <div class="birlik">
           <div class="footer-left">
             <a href="#" class="footer-links1">Advertising</a>
