--- a/Parallax_Website/index.html
+++ b/Parallax_Website/index.html
@@ -9,16 +9,17 @@
 </head>
 <body>
     <div class="image a">
-        <h1>a</h1>
+        <p>PARALLAX WEBSITE</p>
     </div>
     <div class="image b">
-        <h1>b</h1>
+        <section class="alk"><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque assumenda quas aliquid odio. Quod distinctio maiores soluta molestias dolores, iusto enim? Harum tempora debitis explicabo quia natus vel aspernatur nul Atque sunt explicabo at eum natus cum, harum beatae ab, sed nam suscipit, similique est? Enim, dolorum. Accusantium, rerum vel!</span></section>
+        <p>IMAGE TWO TEXT</p>
     </div>
     <div class="image c">
-        <h1>c</h1>
+        <p>IMAGE TWO TEXT</p>
     </div>
     <div class="image d">
-        <h1>d</h1>
+        <p>IMAGE TWO TEXT</p>
     </div>
 </body>
 </html>
