--- a/Parallax_Website/index.html
+++ b/Parallax_Website/index.html
@@ -12,14 +12,15 @@
         <p>PARALLAX WEBSITE</p>
     </div>
     <div class="image b">
-        <section class="alk"><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque assumenda quas aliquid odio. Quod distinctio maiores soluta molestias dolores, iusto enim? Harum tempora debitis explicabo quia natus vel aspernatur nul Atque sunt explicabo at eum natus cum, harum beatae ab, sed nam suscipit, similique est? Enim, dolorum. Accusantium, rerum vel!</span></section>
+        <section class="alk">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque assumenda quas aliquid odio. Quod distinctio maiores soluta molestias dolores, iusto enim? Harum tempora debitis explicabo quia natus vel aspernatur nul Atque sunt explicabo at eum natus cum, harum beatae ab, sed nam suscipit, similique est? Enim, dolorum. Accusantium, rerum vel!</section>
         <p>IMAGE TWO TEXT</p>
     </div>
     <div class="image c">
-        <p>IMAGE TWO TEXT</p>
+        <p>IMAGE THREE TEXT</p>
     </div>
     <div class="image d">
-        <p>IMAGE TWO TEXT</p>
+        <p>PARALLAX WEBSITE</p>
     </div>
+    
 </body>
 </html>
