--- a/Dbahceuyarlama/index.html
+++ b/Dbahceuyarlama/index.html
@@ -15,11 +15,11 @@
                 <div class="logo"><H1>BAHCEMIZ</H1></div>
                 <ul class="top-social-menu">
                     <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                    <li><a href="#"><i class="fab fa-google"></i></a></li>
+                    <li><a href="#"><i class="fab fa-adn"></i></a></li>
                 </ul>
                 <div class="login-area">
                     <a href="#" class="btn1">Login<span><i class="fab fa-sign-in-alt"></i></span></a>
@@ -27,7 +27,28 @@
                 </div>
             </div>
         </div>
-        <div class="nav-header"></div>
+        <div class="nav-header">
+            <div class="container">
+                <div class="nav-header">
+                    <nav class="navbar">
+                        <ul class="navbar-list">
+                            <li><a href="#">Home</a></li>
+                        <ul class="navbar-list">
+                            <li><a href="#">Games</a>
+                            </li>
+                        <ul class="navbar-list">
+                            <li><a href="#">Home</a></li>
+                        <ul class="navbar-list">
+                            <li><a href="#">Home</a></li>
+                        <ul class="navbar-list">
+                            <li><a href="#">Home</a></li>
+                        <ul class="navbar-list">
+                            <li><a href="#">Home</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
     </header>
 </body>
 </html>
