--- a/Border/index.html
+++ b/Border/index.html
@@ -39,5 +39,13 @@
         </p>
       </div>
     </div>
+    <html lang="tr">
+  <body>
+    <p class="none">bu bir paragraftır(none)</p>
+    <p class="capitalize">bu bir paragraftır(capitalize)</p>
+    <p class="uppercase">bu bir paragraftır(uppercase)</p>
+    <p class="lowercase">bu bir paragraftır(lowercase)</p>
+  </body>
+</html>
   </body>
 </html>
