--- a/Dbahceuyarlama/index.html
+++ b/Dbahceuyarlama/index.html
@@ -35,6 +35,10 @@
                             <li><a href="#">Home</a></li>
                         <ul class="navbar-list">
                             <li><a href="#">Games</a>
+                                <ul class="dropdown">
+                                    <li><a href="#">Game 1</a> </li>
+                                    <li><a href="#">Game 2</a></li>
+                                </ul>
                             </li>
                         <ul class="navbar-list">
                             <li><a href="#">Home</a></li>
