--- a/Parallax_Website/index.html
+++ b/Parallax_Website/index.html
@@ -19,7 +19,7 @@
         <section class="secb"><h1>Section Two</h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque assumenda quas aliquid odio. Quod distinctio maiores soluta molestias dolores, iusto enim? Harum tempora debitis explicabo quia natus vel aspernatur nul Atque sunt explicabo at eum natus cum, harum beatae ab, sed nam suscipit, similique est? Enim, dolorum. Accusantium, rerum vel!</section>
         <p class="others">IMAGE THREE TEXT</p>
     </div>
-    <div class="image d">
+    <div class="letzte">
         <section class="secb"><h1>Section Three</h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque assumenda quas aliquid odio. Quod distinctio maiores soluta molestias dolores, iusto enim? Harum tempora debitis explicabo quia natus vel aspernatur nul Atque sunt explicabo at eum natus cum, harum beatae ab, sed nam suscipit, similique est? Enim, dolorum. Accusantium, rerum vel!</section>
         <p class="erste">PARALLAX WEBSITE</p>
     </div>
