responsive wird gemacht

--- a/Checkout/index.html
+++ b/Checkout/index.html
@@ -55,7 +55,7 @@
           <div class="input adress">
             <i class="fas fa-home"></i>
             <input
-              class="full"
+              class="full adres"
               type="text"
               id="adress"
               placeholder="Enter your adress..."
@@ -78,9 +78,7 @@
                 <i class="fas fa-globe-americas"></i>
                 <select
                   class="full option"
-                  id="city"
-                  "
-                >
+                  id="city">
                   <option value="Deutschland">Deutschland</option>
                   <option value="Türkey">Türkey</option>
                   <option value="Usa">Usa</option>
@@ -110,7 +108,46 @@
         </form>
       </div>
       <div class="container-right">
-        <h3>Deneme</h3>
+        <div class="img1">
+            <img src="./IMG/photo1.png" alt="tasche" height="125vh" width="125vh">
+            <div class="yazi">
+                <div class="yazilar">
+                    Vintage Backbag <br>
+                    <span>$54.99</span><del>$94.99</del>
+                </div>    
+                <div class="icons">
+                    <i class="fas fa-minus"></i>
+                    <label for="">1</label>
+                    <i class="fas fa-plus"></i>
+                </div>
+            </div>
+        </div>
+        <div class="img2">
+            <img src="./IMG/photo2.png" alt="tasche" height="125vh" width="125vh">
+            <div class="yazi">
+                <div class="yazilar">
+                    Levi Shoes <br>
+                    <span>$74.99</span><del>$124.99</del>
+                </div>    
+                <div class="icons">
+                    <i class="fas fa-minus"></i>
+                    <label for="">1</label>
+                    <i class="fas fa-plus"></i>
+                </div>
+            </div>
+        </div>
+        <div class="son">
+            
+            <div class="shipping">
+                <p class="sonleft">Shipping</p> 
+                <p class="sonright" for="">13$</p>
+            </div>
+            
+            <div class="total">
+                <p class="sonleft">Total</p> 
+                <p class="sonright" for="">134$</p>
+            </div>
+        </div>
       </div>
     </main>
   </body>
