--- a/Dbahceuyarlama/index.html
+++ b/Dbahceuyarlama/index.html
@@ -22,8 +22,8 @@
                     <li><a href="#"><i class="fab fa-adn"></i></a></li>
                 </ul>
                 <div class="login-area">
-                    <a href="#" class="btn1">Login<span><i class="fab fa-sign-in-alt"></i></span></a>
-                    <a href="#" class="btn1">LogOut<span><i class="fab fa-user-plus"></i></span></a>
+                    <a href="#" class="btn1">Login<span><i class="fas fa-sign-in-alt"></i></span></a>
+                    <a href="#" class="btn1">LogOut<span><i class="fas fa-user-plus"></i></span></a>
                 </div>
             </div>
         </div>
